@@ -749,5 +749,7 @@
 	* configs/mcu123-lpc214x/src: Corrected some logic in the LPC2148 SPI receive block
 	  logic.  Re-verified SDC ver1.x support with 1Gb Toshiba SDC, 1Gb PNY SDC, 2Gb SanDisk SDC,
 	  and 4Gb Kingston SDHC.
+	* fs/fs_mount.c: Corrected error handling that could cause a deadlock on certain
+	  mount() failures.
 
 
